--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <body>
     <div id= "container">
       <header>
-        <h1>Métodos de estudio: Introducción</h1>
+        <h1 style= "color: white;">Universidades</h1>
+        <img src="https://www.natkan.edu.mx/img/natkan/home/logo-natkan-blanco.png" style="float: center; width: 100px;">
+        <body bgcolor="#0072C3">
+        <font color="white">
       </header>
       <br><br>
       <nav class="menu">
-        <ul>
+        <ul style="float: center;">
           <li><a href=https://iffyq17.github.io/UT/>UT</a></li>
           <li><a href=https://iffyq17.github.io/EBC/>EBC</a></li>
           <li><a href="/">ANAHUAC</a></li>
@@ -21,17 +24,12 @@
       </nav>
       <br><br>
       <section id= "content">
-        <p>P </p>
+        <p> </p>
 
         <article class= "article">
-          <h2>Método Cornell</h2><img src="">
-            <p>Este método fue creado en la década de los 50 por Walter Pauk, un profesor de la universidad Cornell, este método es un sistema para tomar notas con una estructura definida para organizar mucha información sobre un tema en especial, normalmente para tomar apuntes se empieza escribiendo desde la parte superior de la hoja, pero en este método la hoja se divide en ciertas áreas y esas son: </p>
-            <p>Encabezado: Esta sección solo contiene datos como la fecha, el nombre de la asignatura, el número de la página, y también el nombre del docente que da la clase. </p>
-            <p>Apuntes: En esta sección se ubican los apuntes que realizaras de forma normal durante tu clase. </p>
-            <p>Laterales: En la parte izquierda de la hoja anotaras preguntas o palabras clave para facilitar su memorización. </p>
-            <p>Resumen: Una vez que se hayan tomado y repasado los apuntes para colocar los puntos más importantes en la sección lateral de la hoja, será necesario hacer un resumen para sintetizar la información. </p>
-            <h2>Técnica Pomodoro</h2><img src=https://www.mindicsalud.com/sites/default/files/tecnica-pomodoro.jpg>
-            <p>Este método fue creado por Francesco Cirillo en la década de los 80, y se basa en usar un temporizador para dividir el tiempo de estudio en intervalos llamados Pomodoros los cuales duran 25 minutos de estudio y 5 minutos de descanso, hay pausas más grandes después de 4 Pomodoros. El método se basa en la idea de que las pausas regulares pueden mejorar la agilidad mental y nos ayuda a ofrecer una buena respuesta a tiempos limitados y no ansiedad frente a la limitante del tiempo </p>
+          <h2>M</h2><img src="">
+            <p>En esta página le presentamos las </p>
+            
 
         </article>
 
