--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul style="float: center;">
           <li><a href=https://iffyq17.github.io/UT/>UT</a></li>
           <li><a href=https://iffyq17.github.io/EBC/>EBC</a></li>
-          <li><a href="/">ANAHUAC</a></li>
+          <li><a href="https://iffyq17.github.io/ANAHUAC/">ANÁHUAC</a></li>
           <li><a href="https://iffyq17.github.io/MODELO/">MODELO</a></li>
           <li><a href="https://iffyq17.github.io/UADY/">UADY</a></li>
         </ul>
